# TagTeam

./: .editorconfig  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/controllers/: health.py  items.py
app/models/: item.py
tests/: test_items.py  test_main.py
