[project]
name = "litestarTest"
version = "0.1.0"
description = "A starter repository for the Litestar ASGI framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "litestar>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_system"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
